app2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/iankwatts-tools/goodbyeworld:latest
        name: app2
        ports:
        - containerPort: 9999
