app2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app2
  namespace: iankwatts-test
spec:
  to:
    kind: Service
    name: app2
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
